--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "markdown-it": "14.1.0"
+    "markdown-it": "14.1.0",
+    "markdown-it-regexp": "^0.4.0"
   }
 }
